--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200;400;500;700;800&display=swap');
 
 * {
     margin: 0;
@@ -21,11 +21,9 @@
     background: linear-gradient(180deg, #1E2A38 0%, #171717 100%);
     font-family: 'Roboto', sans-serif;
     color: #f5f5f5;
-    text-decoration: none;
     font-weight: normal;
     font-size: 20px;
     grid-template-columns: [first] 350px [centre] auto [three] 30% [end];
-    column-gap: 30px;
 }
 
 .logo {
