--- a/views/header_logged_in.html
+++ b/views/header_logged_in.html
@@ -4,14 +4,14 @@
     <nav class="navbar">
       <div class="logo">
         <a class="logo_img noselect" href="/"></a>
-        <a class="link_hidden noselect" href="/">FilmTime</a>
+        <a class="link_hidden_header noselect" href="/">FilmTime</a>
       </div>
   
       <ul class="links">
-        <li><a class="link1 link_hidden noselect" href="homepage">Home</a></li>
-        <li><a class="link2 link_hidden noselect" href="movies_list">Movies</a></li>
-        <li><a class="link3 link_hidden noselect" href="tv_shows_list">TV shows</a></li>
-        <li><a class="link4 link_hidden noselect" href="cartoons_list">Cartoons</a></li>  
+        <li><a class="link1 link_hidden_header noselect" href="homepage">Home</a></li>
+        <li><a class="link2 link_hidden_header noselect" href="movies_list">Movies</a></li>
+        <li><a class="link3 link_hidden_header noselect" href="tv_shows_list">TV shows</a></li>
+        <li><a class="link4 link_hidden_header noselect" href="cartoons_list">Cartoons</a></li>  
       </ul>
   
       <div class="profile">
