Added sign up and login pages, validation on these pages, and fixed some links in the header

--- a/views/header.html
+++ b/views/header.html
@@ -3,20 +3,20 @@
   
     <nav class="navbar">
       <div class="logo">
-        <a class="logo_img noselect" href="/"></a>
-        <a class="link_hidden_header noselect" href="/">FilmTime</a>
+        <a class="logo_img noselect" href="homepage.php"></a>
+        <a class="link_hidden_header noselect" href="homepage.php">FilmTime</a>
       </div>
   
       <ul class="links">
-        <li><a class="link1 link_hidden_header noselect" href="homepage">Home</a></li>
+        <li><a class="link1 link_hidden_header noselect" href="homepage.php">Home</a></li>
         <li><a class="link2 link_hidden_header noselect" href="movies_list">Movies</a></li>
         <li><a class="link3 link_hidden_header noselect" href="tv_shows_list">TV shows</a></li>
         <li><a class="link4 link_hidden_header noselect" href="cartoons_list">Cartoons</a></li>  
       </ul>
   
       <div class="profile">
-        <div class=""><a class="link_hidden_header noselect signup_link" href="sign_up">Sign up</a></div>
-        <div class=""><a class="link_hidden_header noselect login_link" href="login">Login</a></div>
+        <div class=""><a class="link_hidden_header noselect signup_link" href="sign_up.php">Sign up</a></div>
+        <div class=""><a class="link_hidden_header noselect login_link" href="login.php">Login</a></div>
       </div>
     </nav>
 
