--- a/views/header_logged_in.html
+++ b/views/header_logged_in.html
@@ -3,12 +3,12 @@
   
     <nav class="navbar">
       <div class="logo">
-        <a class="logo_img noselect" href="/"></a>
-        <a class="link_hidden_header noselect" href="/">FilmTime</a>
+        <a class="logo_img noselect" href="homepage.php"></a>
+        <a class="link_hidden_header noselect" href="homepage.php">FilmTime</a>
       </div>
   
       <ul class="links">
-        <li><a class="link1 link_hidden_header noselect" href="homepage">Home</a></li>
+        <li><a class="link1 link_hidden_header noselect" href="homepage.php">Home</a></li>
         <li><a class="link2 link_hidden_header noselect" href="movies_list">Movies</a></li>
         <li><a class="link3 link_hidden_header noselect" href="tv_shows_list">TV shows</a></li>
         <li><a class="link4 link_hidden_header noselect" href="cartoons_list">Cartoons</a></li>  
@@ -22,7 +22,7 @@
         <div class="notifications" id="notifications">
             <p>There are no new notifications.</p>
         </div>
-        <a class="user_profile_img noselect" href="user_profile"></a>
+        <a class="user_profile_img noselect" href="user_profile.php"></a>
       </div>
     </nav>
 
