--- a/styles/sign_up.css
+++ b/styles/sign_up.css
@@ -77,7 +77,7 @@ h1 {
     pointer-events: none;
 }
 
-.sign_up_button {
+.sign_up_button, .login_button {
     width: 100%;
     height: 56px;
     padding: 12px;
@@ -91,7 +91,7 @@ h1 {
     cursor: pointer;
 }
 
-.sign_up_button:hover, .sign_up_button:active {
+.sign_up_button:hover, .login_button:hover, .sign_up_button:active, .login_button:active {
     background-color: #8F959D;
     color: #464646;
     border-color: #8F959D;
