--- a/styles/header.css
+++ b/styles/header.css
@@ -23,7 +23,7 @@
     color: #f5f5f5;
     font-weight: normal;
     font-size: 20px;
-    grid-template-columns: [first] 350px [centre] auto [three] 30% [end];
+    grid-template-columns: [first] 350px [centre] auto [three] 270px [end];
 }
 
 .logo {
